import moment from 'moment'
import mongoose from 'mongoose'
import { RequestType, UserGender, UserRoles, UserStatus } from '~/constants/enums'

export interface User {
  name: string
  user_name: string
  email: string
  password: string
  avatar?: string
  cover_avatar?: string
  birthday?: Date
  address?: string
  gender?: string
  weight?: number
  target_weight?: number
  pre_weight?: {
    weight: number
    date: Date
  }[]
  height?: number
  age?: number
  health_goal?: string
  dietary_preferences?: string
  allergies?: string
  hip?: number
  neck?: number
  waist?: number
  activity_level?: number
  activity_level_text?: string
  BMI?: number
  BMR?: number
  TDEE?: number
  body_fat?: number
  IBW?: number
  LBM?: number
  pre_BMI?: { value: number; date: Date }[]
  pre_BMR?: { value: number; date: Date }[]
  pre_TDEE?: { value: number; date: Date }[]
  pre_body_fat?: { value: number; date: Date }[]
  pre_LBM?: { value: number; date: Date }[]
  pre_IBW?: { value: number; date: Date }[]
  role?: UserRoles
  banned_count?: number
  status?: UserStatus
  otp_code?: string
  upgrade_request?: {
    reason: string
    proof: string
    type: RequestType
  }
  isDeleted?: boolean
  stravaProviderId?: string
  stravaAccessToken?: string
  stravaRefreshToken?: string
  stravaTokenExpiresAt?: Date
}

const UserSchema = new mongoose.Schema<User>(
  {
    name: { type: String, maxlength: 160, required: true },
    user_name: { type: String, maxlength: 160, required: true },
    email: { type: String, maxlength: 160, required: true },
    password: { type: String, maxlength: 160, required: true },
    cover_avatar: {
      type: String,
      default: ''
    },
    avatar: {
      type: String,
      default: ''
    },
    birthday: {
      type: Date,
      default: null
    },
    address: {
      type: String,
      default: ''
    },
    gender: {
      type: String,
      default: UserGender.other
    },
    weight: {
      type: Number,
      default: null
    },
    target_weight: {
      type: Number,
      default: null
    },
    pre_weight: [
      {
        weight: { type: Number, default: null },
        date: { type: Date, default: moment().toDate() }
      }
    ],
    height: {
      type: Number,
      default: null
    },
    age: {
      type: Number,
      default: null
    },
    health_goal: {
      type: String,
      default: ''
    },
    dietary_preferences: {
      type: String,
      default: ''
    },
    allergies: {
      type: String,
      default: ''
    },
    hip: {
      type: Number,
      default: null
    },
    neck: {
      type: Number,
      default: null
    },
    waist: {
      type: Number,
      default: null
    },
    activity_level: {
      type: Number,
      default: null
    },
    activity_level_text: {
      type: String,
      default: ''
    },
    BMI: {
      type: Number,
      default: null
    },
    BMR: {
      type: Number,
      default: null
    },
    TDEE: {
      type: Number,
      default: null
    },
    body_fat: {
      type: Number,
      default: null
    },
    IBW: {
      type: Number,
      default: null
    },
    LBM: {
      type: Number,
      default: null
    },
    pre_BMI: [
      { value: { type: Number }, date: { type: Date, default: Date.now } }
    ],
    pre_BMR: [
      { value: { type: Number }, date: { type: Date, default: Date.now } }
    ],
    pre_TDEE: [
      { value: { type: Number }, date: { type: Date, default: Date.now } }
    ],
    pre_body_fat: [
      { value: { type: Number }, date: { type: Date, default: Date.now } }
    ],
    pre_LBM: [
      { value: { type: Number }, date: { type: Date, default: Date.now } }
    ],
    pre_IBW: [
      { value: { type: Number }, date: { type: Date, default: Date.now } }
    ],
    role: {
      type: Number,
      default: UserRoles.user
    },
    banned_count: {
      type: Number,
      default: 0
    },
    status: {
      type: Number,
      default: UserStatus.active
    },
    otp_code: {
      type: String,
      default: ''
    },
    upgrade_request: {
      reason: { type: String, default: null },
      proof: { type: String, default: null },
      type: { type: Number, default: null }
    },
    isDeleted: { type: Boolean, default: false },
    stravaProviderId: { type: String, default: null },
    stravaAccessToken: { type: String, default: null },
    stravaRefreshToken: { type: String, default: null },
    stravaTokenExpiresAt: { type: Date, default: null }
  },
  {
    timestamps: true,
    collection: 'users'
  }
)

UserSchema.index({ name: 'text', email: 'text', user_name: 'text' }, { default_language: 'none' })

const UserModel = mongoose.model('users', UserSchema)

export default UserModel
